--- a/style.css
+++ b/style.css
@@ -40,17 +40,11 @@ ul li {
   list-style: none;
 }
 
-h2 {
-  color: var(--white);
-  font-family: "Inter";
-  text-transform: uppercase;
-  font-weight: bold;
-  padding: 5px;
-}
-
 /* content */
 
 .container {
+  display: flex;
+  flex-direction: column;
   margin: 20px;
   padding-bottom: 30px;
   width: 375px;
@@ -59,7 +53,7 @@ h2 {
   box-shadow: 3px 3px 3px hsl(244, 38%, 16%, 0.2);
 }
 
-.container .bg-image {
+.bg-image {
   background: url(images/image-header-mobile.jpg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -69,29 +63,29 @@ h2 {
   overflow: hidden;
 }
 
-.container .bg-image .overlay {
-  background: hsl(277, 100%, 30%, 0.6);
-  height: 300px;
+.overlay {
+  background: hsl(277, 64%, 35%, 0.6);
+  height: 275px;
 }
 
-.container .title {
+.title {
   font-family: "Lexend Deca";
   font-weight: bold;
   margin: 30px 30px 0 30px;
   color: var(--white);
 }
 
-.container .title .change-color {
+.change-color {
   color: var(--soft-violet);
 }
 
-.container .desc {
+.desc {
   color: var(--slightly-transparent-white1);
   margin: 0 10px 50px 10px;
   padding: 30px 30px 0 30px;
 }
 
-.container ul {
+.list {
   display: flex;
   flex-direction: column;
   list-style: none;
@@ -99,20 +93,20 @@ h2 {
   align-items: center;
 }
 
-.container ul li {
+.list li {
   margin-bottom: 2em;
 }
 
-.container h2 {
+.subtitle {
   color: var(--white);
-  font-size: 1.5rem;
-  text-align: center;
-  margin-bottom: 0.15em;
+  font-family: "Inter";
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
-.container ul p {
+.list p {
   font-family: "Lexend Deca";
-  font-size: 15px;
+  font-size: 13px;
   text-transform: uppercase;
   color: var(--slightly-transparent-white2);
 }
@@ -139,5 +133,70 @@ h2 {
   color: var(--soft-violet);
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 900px;
+    padding: 0;
+  }
+
+  .bg-image {
+    background: url(./images/image-header-desktop.jpg);
+    height: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 0 10px 10px 0;
+    overflow: hidden;
+  }
+
+  .overlay {
+    height: 100%;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+
+  .title {
+    font-size: 2rem;
+    padding: 10px;
+  }
+
+  .desc {
+    font-size: 0.85rem;
+    margin: 0;
+    padding: 0 40px;
+    margin-top: 10px;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 30px;
+    margin-top: 30px;
+  }
+
+  .list li {
+    margin-right: 20px;
+  }
+
+  .subtitle {
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+  }
+
+  .list li p {
+    font-size: 0.65rem;
+  }
 }
