--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ ul li {
 .bg-image {
   background: url(images/image-header-mobile.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   height: 275px;
   width: 100%;
   border-radius: 10px 10px 0 0;
@@ -64,7 +64,7 @@ ul li {
 }
 
 .overlay {
-  background: hsl(277, 64%, 35%, 0.6);
+  background: hsl(277, 66%, 35%, 0.7);
   height: 275px;
 }
 
@@ -125,7 +125,7 @@ ul li {
   line-height: 20px;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--white);
   text-decoration: none;
 }
 
@@ -144,7 +144,7 @@ ul li {
   .container {
     display: flex;
     flex-direction: row-reverse;
-    width: 900px;
+    width: 1000px;
     padding: 0;
   }
 
@@ -165,26 +165,27 @@ ul li {
     display: flex;
     flex-direction: column;
     text-align: left;
+    padding: 30px;
   }
 
   .title {
-    font-size: 2rem;
-    padding: 10px;
+    font-size: 1.5rem;
+    padding: 20px 35px;
   }
 
   .desc {
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     margin: 0;
-    padding: 0 40px;
-    margin-top: 10px;
+    padding: 0 65px;
+    line-height: 1.2rem;
   }
 
   .list {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 30px;
-    margin-top: 30px;
+    padding: 0 55px;
+    margin-top: 70px;
   }
 
   .list li {
@@ -192,7 +193,7 @@ ul li {
   }
 
   .subtitle {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 5px;
   }
 
